syntax = "proto3";

package SumAPI;

message SumRequest {
	int32 number_1 = 1;
	int32 number_2 = 2;
}

message SumResponse {
	int32 result = 1;
}

service SumService {
	rpc Sum (SumRequest) returns (SumResponse);
}
